--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 //===URL===//
 @import url('//db.onlinewebfonts.com/c/4e447705f6a3ad4e6e6ec31c7c8a14aa?family=Revamped');
 //===Animation===//
+@import "./animations/index.scss";
 
 //===Files===//
 @import "./components/shared/Dock/dock.scss";
