--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -49,9 +49,26 @@ body {
   padding: 0px !important;
 }
 
-.lines-bg{
-  background-image: url('../../public/lines.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+
+//Scroller Styles
+
+/* Hide default scrollbar for WebKit browsers */
+::-webkit-scrollbar {
+  width: 7px; /* Set the width of the scrollbar */
+}
+
+/* Track (the area behind the thumb) */
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Set the background color of the track */
+}
+
+/* Handle (the draggable part) */
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Set the color of the thumb */
+  border-radius: 4px; /* Set the border radius of the thumb */
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Set the color of the thumb on hover */
 }
