--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -57,6 +57,14 @@ body {
   width: 7px; /* Set the width of the scrollbar */
 }
 
+.scrollable-content {
+  height: 150px !important;
+}
+
+.scrollable-content::-webkit-scrollbar {
+  display: none !important;
+}
+
 /* Track (the area behind the thumb) */
 ::-webkit-scrollbar-track {
   background-color: #f1f1f1; /* Set the background color of the track */
