--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 //===Files===//
 @import "./components/shared/Dock/dock.scss";
 @import "./components/shared/Dock/flags.scss";
+@import "./components/shared/Cards/servicesCardStyles.scss";
 
 //===Tailwind CSS===//
 @tailwind base;
